# a-mini-dictionary-v3

./: CMakeLists.txt  README.md
Doc/: Mini Dictionary Report.docx
Resources/Datasets/EngtoViet/: Backup.txt
dependency/: CMakeLists.txt
dependency/uni-algo/: CMakeLists.txt
resources/: Mini Dictionary Report.docx
resources/data/: _STRUCTURE.txt  favorite.txt  history.txt
resources/data/emo/: backup.txt
resources/data/ev/: data.txt
resources/data/slang/: data.txt
resources/data/ve/: backup.txt
resources/favorite-list/: STRUCTURE.txt
resources/themes/: _STRUCTURE.txt
source/: CMakeLists.txt  main.cpp
source/back/: CMakeLists.txt  Dictionary.h  Globals.cpp  Globals.h  WordNDef.h  red-black-tree.cpp  red-black-tree.h  suffix-array.h  tst.h
source/front/: BaseFrame.cpp  BaseFrame.h  CMakeLists.txt  HistoFavor-page.cpp  HistoFavor-page.h  HomeFrame.cpp  HomeFrame.h  MainFrame.cpp  Properties.h  add-page.cpp  add-page.h  base-frame.cpp  base-frame.h  edit-page.cpp  edit-page.h  favorite-page.cpp  favorite-page.h  frame.cpp  frame.h  game-definition-page.cpp  game-definition-page.h  game-setting-page.cpp  game-setting-page.h  game-word-page.cpp  game-word-page.h  gameplay-page.cpp  gameplay-page.h  home-frame.cpp  home-frame.h  home-page.cpp  home-page.h  list-window.cpp  list-window.h  main-frame.cpp  more-page.cpp  more-page.h  properties.h  roundbutton.cpp  roundbutton.h  search-page.cpp  (+1 more)
src/: CMakeLists.txt  a-mini-dictionary-v3.cpp  a-mini-dictionary-v3.h
